# rates-saver

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  build.rs
migrations/2023-07-25-070650_create_rates_hitory_table/: down.sql  up.sql
proto/services/exchange/: bidask.proto
proto/services/price_alert/: price_alert_event.proto
proto/services/price_alert/grpc/: echo.proto  price_alerts.proto
proto/services/rates_saver/grpc/: rates_saver.proto
src/: app_constants.rs  app_context.rs  main.rs
src/app_config/: mod.rs  reader.rs
src/common/: logger.rs  mod.rs
src/db/: db_manager.rs  mod.rs  schema.rs
src/db/models/: mod.rs
src/endpoints/: mod.rs  rates_saver_grpc.rs
src/endpoints/grpc/: mod.rs  ratessaver.rs  server.rs
src/endpoints/http/: server.rs
src/models/: bidask.rs  ext.rs  mod.rs  tests.rs
src/service_bus/: handlers.rs  mod.rs  subscribers.rs  tests.rs
src/storages/: console.rs  mod.rs  postgres.rs
